# opticommand

./: .gitignore  Makefile.am  Makefile.am.inc  ccResolutions  configure.ac  opticommand.cc  opticommand.conf.ex
Application/: application.cc  application.hh  application.ih  commandconstructor1.cc  commandconstructor2.cc  directmode.cc  handleaddjob.cc  handlechain.cc  handlehelp.cc  handlejobinfo.cc  handlelistjobs.cc  handlequit.cc  handleremovejob.cc  initcommands.cc  interactivemode.cc  onclosed.cc  ondata.cc  oninterrupt.cc  parsearguments.cc  parsecommand.cc  parseuri.cc  printjob.cc  prompt.cc  run.cc  sendcommand.cc  showjobinfo.cc  showlistjobs.cc  statics.cc
Config/: config.cc  config.hh  config.ih
debian/: changelog  control  opticommand.install  rules
src/: Makefile.am  application.cc  application.hh  config.cc  config.hh  opticommand.cc
